11/19/13 move pH indicator (arrow) to BasicPHMeterNode, since the indicator is different in all 3 meters
11/19/13 when changing solute, drop solution volume to zero
11/18/13 add separator in beaker control panel
11/18/13 extract PHScaleNode, to be used in both 'Basics' and 'Solutions' pH meters
11/18/13 prepare 'pH scale' portion of Basics pH meter for reuse in 'Solutions' screen
11/18/13 adjust drag bounds of dropper
11/18/13 light gray background for control panel
11/18/13 add 'Molecule count' and 'ratio' check boxes (no view components yet)
11/18/13 add options to various model elements, simplify usage of constructors, fix 'Reset All'
11/18/13 use opaque colors for solutes, so that color of solution matches dropper when solution is 100% solute
11/18/13 optionally show pH value of solute on dropper ('pH 11.00')
11/18/13 pH meter for 'Custom' screen
11/18/13 rename PHMeterNode to BasicsPHMeterNode, since each screen has a different meter
11/18/13 start fleshing out model and view for 'Custom' screen
11/18/13 move model constants to PHScaleConstants
11/15/13 add solvent color behind solution color in beaker, make solvent (water) color opaque
11/14/13 move PHMeterNode to basics.view package, since it's specific to 'Basics' screen
11/13/13 revert screen background to 'white' to demonstrate problems with this color
11/13/13 tweak initial position of water faucet
11/13/13 move initial location of pH probe to be more similar to design doc
11/13/13 adjust control point for connection of wire to pH meter body
11/13/13 **** 'pH Scale: Basics' feature complete ****
11/13/13 tweak layout
11/13/13 fix arrow shape for volume indicator
11/13/13 remove vestigial pH indicator showing up in upper-left corner of screen
11/13/13 use same font and arrow size for volme and pH indicators
11/13/13 tweak font sizes to make things look more balanced
11/13/13 attach wire to correct location on pH meter
11/13/13 fix indicator on pH meter
11/13/13 cleanup and delete unused stuff in pH meter